Se creó con Colab

--- a/Pablo_AquinoG.ipynb
+++ b/Pablo_AquinoG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4LtV/8VHv+hoz9D2VVM8S",
+      "authorship_tag": "ABX9TyOi+f3mrhhxrNLoV1rtwG9K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "deQVyyS_Xy07"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
         "\n",
         "tupla_dados = (1, 2, 3, 4, 5, 6)\n",
         "\n",
-        "# Solicitamos al usuario el número de lanzamientos\n",
+        "##Solicitamos al usuario el número de lanzamientos##\n",
         "num_lanzamientos = int(input('Ingrese el número de lanzamientos de ambos dados a la vez: '))\n",
         "\n"
       ],
@@ -349,7 +349,7 @@
         "  results_lanzamientos.append((result_dado_1, result_dado_2))\n",
         "  i += 1\n",
         "\n",
-        "print('Resultados de los lanzamientos: ')\n",
+        "print('Resultados de los lanzamientos es: ')\n",
         "for lanzamiento in results_lanzamientos:\n",
         "    print(lanzamiento)"
       ],
@@ -358,9 +358,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0NU1-S1ChvjU",
-        "outputId": "7f1df757-8a06-4bad-e4ad-59ac33203448"
+        "outputId": "3c0716c2-6168-46ce-e7a2-85417a2f1b94"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,9 +368,9 @@
           "text": [
             "Ingrese el número de lanzamientos de ambos dados a la vez: 3\n",
             "Resultados de los lanzamientos: \n",
-            "(3, 5)\n",
-            "(6, 1)\n",
-            "(6, 5)\n"
+            "(5, 6)\n",
+            "(4, 4)\n",
+            "(3, 1)\n"
           ]
         }
       ]
@@ -396,7 +396,7 @@
         "  results_lanzamientos.append((result_dado_1, result_dado_2))\n",
         "  i += i+1\n",
         "\n",
-        "print('Resultados de los lanzamientos: ')\n",
+        "print('Resultados de los lanzamientos es: ')\n",
         "for lanzamiento in results_lanzamientos:\n",
         "    print(lanzamiento)\n",
         "print(f'La suma de los valores de los lanzamientos es: {suma_results}')"
@@ -408,7 +408,7 @@
         "id": "7QjyT4mEi7uH",
         "outputId": "76614eb0-21d8-4f3b-a5ce-bb9c0dcbb8be"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,15 +444,15 @@
         "\n",
         "contador_caracteres = {}\n",
         "\n",
-        "# Iteramos sobre cada caracter en el texto\n",
+        "# Iteramos sobre cada caracter en la palabra\n",
         "for caracter in palabra:\n",
         "  if caracter in contador_caracteres:\n",
         "    contador_caracteres[caracter] += 1\n",
         "\n",
-        "else:\n",
+        "  else:\n",
         "    contador_caracteres[caracter] = 1\n",
         "\n",
-        "print('Cantidad de veces que aparece cada caracter:')\n",
+        "print('Cantidad de veces que aparece cada caracter: ')\n",
         "for caracter, cantidad in contador_caracteres.items():\n",
         "    print(f'{caracter}: {cantidad}')"
       ],
@@ -461,17 +461,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pR2ty52ynmEE",
-        "outputId": "abc4b05b-6bf8-46b1-bab6-b45aaadc036d"
+        "outputId": "7a7e18c2-8a5e-4992-da23-67b187b2596e"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ingrese un palabra al azar: elefante\n",
-            "Cantidad de veces que aparece cada caracter:\n",
-            "e: 1\n"
+            "Cantidad de veces que aparece cada caracter: \n",
+            "e: 3\n",
+            "l: 1\n",
+            "f: 1\n",
+            "a: 1\n",
+            "n: 1\n",
+            "t: 1\n"
           ]
         }
       ]
